# all-in-llm

./: .gitignore  README.md  pyproject.toml  temp.py
course-01/: README.md
course-01/chapter-01/: README.md
course-01/chapter-01/code/: 01_langchain_example.py  02_llamaIndex_example.py  README.md
course-01/chapter-01/section-01/: README.md
course-01/chapter-01/section-01/code/: 01_langchain_example.py  02_llamaIndex_example.py  README.md
course-01/chapter-02/: README.md
course-01/chapter-02/section-01/: README.md
course-01/chapter-02/section-01/code/: 01_unstructured_example.py
course-01/chapter-02/section-02/: README.md
course-01/chapter-02/section-02/code/: 01_character_text_splitter.py  (+2 more)
course-01/chapter-03/: README.md
course-01/chapter-03/section-01/: README.md
course-01/chapter-03/section-02/: README.md
course-01/chapter-03/section-03/: README.md
course-01/chapter-03/section-04/: README.md
course-01/chapter-03/section-05/: README.md
course-01/chapter-04/: README.md
course-01/chapter-04/section-01/: README.md
course-01/chapter-04/section-02/: README.md
course-01/chapter-04/section-03/: README.md
course-01/chapter-04/section-04/: README.md
course-01/chapter-04/section-05/: README.md
course-01/chapter-05/: README.md
course-01/chapter-05/section-01/: README.md
course-01/chapter-06/: README.md
course-01/chapter-06/section-01/: README.md
course-01/chapter-06/section-2/: README.md
course-01/chapter-07/: README.md
course-01/chapter-07/section-01/: README.md
course-01/chapter-08/: README.md
course-01/chapter-08/code/: config.py  main.py
course-01/model/: download_model.py
course-01/model/visual_bge/: setup.py
course-02/: README.md
course-02/chapter-01/: README.md
course-02/chapter-01/section-01/: README.md
course-02/chapter-01/section-02/: README.md
course-02/chapter-01/section-03/: README.md
course-02/chapter-02/section-01/: README.md
course-02/chapter-02/section-03/: README.md
(+57 files in other folders)
